complete the featured section and service section

--- a/index.html
+++ b/index.html
@@ -45,8 +45,46 @@
         </section>
         <!-- featured flower section design start -->
         <section class="featured_sec">
-            <h2 class="section_title">Our Featured Flowers</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <div class="section_intro">
+                <h2 class="section_title">Our Featured Flowers</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content <br> of a page when looking at its layout.</p>
+            </div>
+            <div class="featured_img">
+                <div class="single_feature_container">
+                  <div class="single_fitured_img single_img_bg1">
+                    <img src="./img/featured1.png" alt="featured image 1">
+                </div>
+                <a href="#">Pink Flower Tree</a>
+                </div>
+                <div class="single_feature_container">
+                  <div class="single_fitured_img single_img_bg2">
+                  <img src="./img/featured2.png" alt="featured image 2">
+                </div>
+                <a href="#">Pink Flower Tree</a>
+                </div>
+                <div class="single_feature_container">
+                  <div class="single_fitured_img single_img_bg3">
+                  <img src="./img/featured3.png" alt="featured image 3">
+                </div>
+                <a href="#">Pink Flower Tree</a>
+                </div>
+            </div>
+        </section>
+        <section class="service_sec">
+          <div class="service_div">
+            <div class="single_service">
+              <img src="./img/service1.png" alt="service1">
+              <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="single_service">
+              <img src="./img/service2.png" alt="service1">
+              <p>Fresh Flowers. Local Growers.</p>
+            </div>
+            <div class="single_service">
+              <img src="./img/service3.png" alt="service1" style="width: 50%;">
+              <p>24/7 Free Support.</p>
+            </div>
+          </div>
         </section>
     </main>
     <footer></footer>
