--- a/index.html
+++ b/index.html
@@ -86,6 +86,18 @@
             </div>
           </div>
         </section>
+        <section class="hot_deal_section">
+          <div class="main_deal_sec">
+            <div class="left_deal">
+              <h2>Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h2>
+              <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+              <button class="primary_btn">Sign Up</button>
+            </div>
+            <div class="right_deal_img">
+              <img src="./img/hot_deal.png" alt="Hot deal image">
+            </div>
+          </div>
+        </section>
     </main>
     <footer></footer>
   </body>
