--- a/index.html
+++ b/index.html
@@ -98,6 +98,26 @@
             </div>
           </div>
         </section>
+        <section class="instagram">
+          <div class="section_intro">
+              <h2 class="section_title">Our Featured Flowers</h2>
+              <p>It is a long established fact that a reader will be distracted by the readable content <br> of a page when looking at its layout.</p>
+          </div>
+          <div class="main_insta_sec">
+            <div class="single_insta_img">
+              <img src="./img/insta1.png" alt="insta flower 1">
+            </div>
+            <div class="single_insta_img">
+              <img src="./img/insta2.png" alt="insta flower 2">
+            </div>
+            <div class="single_insta_img">
+              <img src="./img/insta3.png" alt="insta flower 3">
+            </div>
+            <div class="single_insta_img">
+              <img src="./img/insta4.png" alt="insta flower 4">
+            </div>
+          </div>
+        </section>
     </main>
     <footer></footer>
   </body>
