complete the assignment 1 project

--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
                 </div>
             </div>
         </section>
+        <!-- hot deal section design start -->
+        <section class="hot_deal_section">
+          <div class="main_deal_sec">
+            <div class="left_deal">
+              <h2>Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h2>
+              <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+              <button class="primary_btn">Sign Up</button>
+            </div>
+            <div class="right_deal_img">
+              <img src="./img/hot_deal.png" alt="Hot deal image">
+            </div>
+          </div>
+        </section>
+        <!-- service section design start -->
         <section class="service_sec">
           <div class="service_div">
             <div class="single_service">
@@ -86,22 +100,36 @@
             </div>
           </div>
         </section>
-        <section class="hot_deal_section">
-          <div class="main_deal_sec">
-            <div class="left_deal">
-              <h2>Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h2>
-              <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
-              <button class="primary_btn">Sign Up</button>
+        <!-- Contact us section design start -->
+        <section class="contact_section">
+          <div class="section_intro">
+            <h2 class="section_title">Contact Us</h2>
+            <p>Contct us by your email, fact that a ipsum dolor sit amet. </p>
+        </div>
+          <div class="contact_div">
+            <div class="left_contact_img">
+              <img src="./img/contact_flower.png" alt="Contact image">
             </div>
-            <div class="right_deal_img">
-              <img src="./img/hot_deal.png" alt="Hot deal image">
+            <div class="right_contact-form">
+              <form class="contact_form">
+                <label for="Name">
+                  <input type="text" placeholder="Your Name" required>
+                </label>
+                <label for="Email">
+                  <input type="email" placeholder="Your email" required>
+                </label>
+                <textarea name="message" cols="30" rows="10"></textarea>
+                <button type="submit" class="primary_btn">Submit</button>
+                <button type="reset" class="primary_btn" style="margin-left: 5px;">Reset</button>
+              </form>
             </div>
           </div>
         </section>
+        <!-- instagram image section design start -->
         <section class="instagram">
           <div class="section_intro">
-              <h2 class="section_title">Our Featured Flowers</h2>
-              <p>It is a long established fact that a reader will be distracted by the readable content <br> of a page when looking at its layout.</p>
+              <h2 class="section_title">Instagram</h2>
+              <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
           </div>
           <div class="main_insta_sec">
             <div class="single_insta_img">
@@ -118,7 +146,29 @@
             </div>
           </div>
         </section>
+        <!-- subscribe section design start -->
+        <section class="subscribe_section">
+          <div class="subscribe_div">
+            <div class="section_intro">
+              <h2 class="section_title">Get The Latest Deals</h2>
+              <p>$30 coupon for first shopping</p>
+            </div>
+            <div class="subscribe_input">
+              <input type="email" name="email" placeholder="Enter your email here..">
+              <input type="button" value="subscribe" class="primary_btn subscribe_btn">
+            </div>
+          </div>
+        </section>
     </main>
-    <footer></footer>
+    <!-- footer section design start -->
+    <footer>
+      <div class="footer_desc">
+        <div class="section_intro">
+          <h2 class="section_title"><span style="color: #E55473;">Flower</span>Shop</h2>
+          <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        </div>
+        <p class="copyright_txt">@2020-2023, FlowerShop.com. All rights reserved. </p>
+      </div>
+    </footer>
   </body>
 </html>
